@@ -1,9 +1,16 @@
+Tue Jul 28 18:59:34 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * java/jms/src/org/opendds/jms/MessageProducerImpl.java:
+
+	  Updated JMS producer to dispose of instances after sending
+	  messages.
+
 Tue Jul 28 18:43:30 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * java/tests/messenger/publisher/TestPublisher.java:
         * java/tests/multirepo/MultiRepoWorker.java:
-          
-	  Updated missing java tests to make use of refactored instance
+
+          Updated missing java tests to make use of refactored instance
           operations.
 
 Tue Jul 28 17:50:42 UTC 2009  Steven Stallion  <stallions@ociweb.com>
